<resources>
    <string name="app_name">Mindcraft</string>
    <string name="btn_back_onboarding">Back button onboarding</string>
    <string name="btn_next_onboarding">Next button onboarding</string>
    <string name="first_onboarding_desc">\"Empowering minds, crafting futures—MindCraft transforms learning into a journey of growth, resilience, and discovery.\"</string>
    <string name="second_onboarding_desc">\"Every student is unique, and so is their learning journey. MindCraft adapts to you, for you.\"</string>
    <string name="third_onboarding_desc">\"Where knowledge meets care—unlock your potential with MindCraft’s tailored support.\"</string>
    <string name="title_home">Home</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_settings">Settings</string>
    <string name="text_dummy">Lorem ipsum odor amet, consectetuer adipiscing elit. Quisque vulputate lectus faucibus mattis consequat mollis. Ridiculus vehicula tristique dolor dignissim tellus bibendum tortor. Tellus dictumst egestas laoreet metus mus velit phasellus. Aliquam inceptos vitae magnis integer habitant dui ornare ridiculus. Dis nibh hac justo, aliquam lacus aenean nam potenti. Placerat curae fringilla diam ad phasellus cras libero. Aliquet nam odio consectetur lectus congue ultricies viverra leo.</string>
    <string name="text_dummy_short">Lorem ipsum odor amet, consectetuer adipiscing elit. Quisque vulputate lectus faucibus mattis consequat mollis. Ridiculus vehicula tristique dolor dignissim tellus bibendum tortor. Tellus dictumst egestas laoreet metus mus velit phasellus. Aliquam inceptos vitae magnis integer habitant dui ornare ridiculus.</string>

    <string name="logo_image_view">logo_image_view</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="new_to_mindcraft">New to Mindcraft?</string>
    <string name="register">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="login_underline"><u>Login</u></string>
    <string name="signup_underline"><u>Sign Up</u></string>

    <string name="timer_finished">00:00</string>

    <string name="profile_picture">Profile picture</string>
    <string name="navigate">Navigate</string>
    <string name="two_step_verification">Two step verification</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="logout">Logout</string>
    <string name="enable_two_step_verification">Enable two step verification</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>