<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ECECEC"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section -->
        <LinearLayout
            android:id="@+id/profileHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@android:color/white"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/profile_picture"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/firstNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:contentDescription="@string/navigate" />
        </LinearLayout>

        <!-- Two-step verification -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@android:color/white"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_key"
                android:contentDescription="@string/two_step_verification" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_step_verification"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_two_step_verification"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/twoStepSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:thumbTint="@color/primary"
                app:trackTint="@color/grey" />


        </LinearLayout>

        <!-- Notifications -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@android:color/white"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_notifications"
                android:contentDescription="@string/notifications" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_notifications"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notificationsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:thumbTint="@color/primary"
                app:trackTint="@color/grey" />
        </LinearLayout>

        <!-- Logout Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/logoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
